# ch-migrate

./: Cargo.toml  LICENSE  README.md
ch-migrate/: Cargo.toml
ch-migrate-cli/: Cargo.toml
ch-migrate-cli/src/: main.rs
ch-migrate-core/: Cargo.toml
ch-migrate-core/src/: checksum.rs  error.rs  lib.rs  migration.rs  migrator.rs  source.rs
ch-migrate-macros/: Cargo.toml
ch-migrate-macros/src/: lib.rs
ch-migrate/src/: lib.rs
