[package]
name = "ch-migrate-core"
description = "Core library for ClickHouse schema migrations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clickhouse = "0.14"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["fs"] }
